Added login functionality

--- a/Bloomify/appsettings.json
+++ b/Bloomify/appsettings.json
@@ -6,8 +6,8 @@
         }
     },
     "ConnectionStrings": {
-        "FlowerShop": "Server=(localdb)\\MSSQLLocalDB;Database=FlowerShop;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=FlowerShop;Trusted_Connection=True;MultipleActiveResultSets=true",
+        "BloomifyContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Bloomify;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
-
     "AllowedHosts": "*"
 }
